# wasmgeoda

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  libgeoda_src
..src/: gda_weights.h  geojson.h  jsgeoda.cpp  utils.h
..src/weights/: GalWeight.cpp  GwtWeight.h
.github/workflows/: build.yml
data/: .natregimes.geojson.swp  4nn.gwt  Columbus.geojson  Guerry.gal  Guerry_dist.gwt  Guerry_ke.kwt  nat_1136.geojson  nyc.geojson  poly_w_holes.geojson  poly_w_islands.geojson
src/: CMakeLists.txt  GdaConst.h  GenUtils.cpp  GenUtils.h  SpatialIndAlgs.cpp  SpatialIndAlgs.h  gda_clustering.h  gda_sa.cpp  gda_sa.h  gda_weights.cpp  gda_weights.h  geofeature.h  geojson.cpp  geojson.h  jsgeoda.cpp  jsgeoda.h  jsgeoda_breaks.cpp  jsgeoda_clustering.cpp  jsgeoda_lisa.cpp  jsgeoda_weights.cpp  pre.js  utils.h
src/clustering/: DataUtils.h  cluster.cpp  cluster.h  redcap.cpp  redcap.h
src/sa/: ColocJoinCount.cpp  ColocJoinCount.h  LISA.cpp  LISA.h  UniG.cpp  UniGeary.cpp  UniGstar.cpp  UniJoinCount.cpp  UniLocalMoran.cpp
src/shape/: centroid.h
src/weights/: GalWeight.cpp  GalWeight.h  GeodaWeight.h  GwtWeight.cpp  PointsToContigWeights.cpp  PolysToContigWeights.cpp  SpatialIndAlgs.cpp  SpatialIndAlgs.h
temp/: test_multithreads.cpp  test_multithreads.html  test_multithreads.js  test_multithreads.js.mem  test_multithreads.wasm  test_pthreads.c  test_pthreads.js  test_pthreads.js.mem  test_pthreads.wasm
test/: build.sh  test_clustering.cpp  test_localSA.cpp  test_pthreads.html  test_table.cpp  test_weights.cpp
web/: index.html
web/apps/geoda/: index.html
web/media/css/: portal.css
web/media/js/geoda/viz/: map_canvas.js
web/media/js/ui/: kclusterDlg.js  lisaDlg.js  main.js  mapManager.js  maxpDlg.js  openfileDlg.js  redcapDlg.js  toolbar.js  uiManager.js  weightsDlg.js
web/media/temp/77085c07594b5edf78e0705d8797d7ad/8Y4HBP/: test.dbf  test.shp  test.shx
web/media/temp/77085c07594b5edf78e0705d8797d7ad/CI1O40/: comareapcamds.dbf
web/media/temp/a62290fc383b413ce36d112ccc70545d/C2Z3PM/: contig2010_var2010.dbf  contig2010_var2010.shx  contig2010_var2010.wgs84.dbf  contig2010_var2010.wgs84.shx  contig2010_var2010_1.gal  contig2010_var2010_queen.gal
web/media/temp/a62290fc383b413ce36d112ccc70545d/DIYAWM/: Chi-SDOH.dbf  Chi-SDOH.prj  Chi-SDOH.wgs84.dbf  Chi-SDOH.wgs84.shp  Chi-SDOH.wgs84.shx
